--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
     <div id="start-screen" class="modal">
         <div class="modal-content">
-            <h1>Massachusetts State Parks and Recreational Facilities</h1>
-            <span class="subtitle">Geoguesser</span>
+            <h1>Massachusetts State Parks Geoguesser</h1>
             <p style="margin-bottom: 20px; color: #555; font-size: 0.95rem;">Identify the DCR property by its shape.</p>
             <input type="text" id="username-input" placeholder="Player Name" maxlength="15" style="width: 80%; margin-bottom: 20px;">
             <br>
@@ -292,3 +291,4 @@
     </script>
 </body>
 </html>
+
